# DrummerScore

./: .gitignore  LICENSE.txt  README.md  generating our own dataset.ipynb  main.ipynb  model copy.ipynb  model egmd.ipynb  model training.ipynb  model vggish.ipynb  model.ipynb  project work.ipynb  requirements.txt  visualizing survey.ipynb
drummerscore/: manage.py
drummerscore/drummerscore/: asgi.py  settings.py  urls.py  wsgi.py
drummerscore/editor/: admin.py  aimodel.py  forms.py  models.py  urls.py  views.py
notebooks/: generating our own dataset.ipynb  main.ipynb  model training.ipynb  transformers.ipynb
notebooks/old_notebooks/: feature generation.ipynb  midi testing mido.ipynb  model multiclass.ipynb  (+1 more)
old_notebooks/: feature generation.ipynb  model egmd.ipynb  project work.ipynb
server/: package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
server/data/locale/: babel.cfg  messages.pot
server/data/locale/en_US/LC_MESSAGES/: messages.mo  messages.po
server/data/locale/ru_RU/LC_MESSAGES/: messages.mo  messages.po
server/data/static/css/: input.css  main.css
server/data/static/js/: play.js
server/data/templates/: base.html  home.html
server/data/templates/components/: note.html
server/data/templates/core/: header.html  sidebar.html
server/src/: config.py  main.py
server/src/api/: __init__.py
server/src/exceptions/: auth.py
server/src/exceptions/handlers/: __init__.py  auth.py
server/src/middleware/: i18n.py
server/src/services/: templates.py
server/src/views/: __init__.py  home.py  onsets.csv
(+2 files in other folders)
